--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -2,7 +2,7 @@
 body {
     width: 100%;
     height: 100%;
-    font-family:"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family: Monotype Corsiva ;
     color: #fff;
     background-color: #f3f3f3;
 }
@@ -20,7 +20,7 @@ h5,
 h6 {
     margin: 0 0 35px;
     text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family:Monotype Corsiva ;
     font-weight: 700;
     letter-spacing: 1px;
 }
@@ -63,7 +63,7 @@ a:focus {
     margin-bottom: 0;
     border-bottom: 1px solid rgba(255,255,255,.3);
     text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-family:Monotype Corsiva ;
     background-color: #000;
 }
 
@@ -136,7 +136,7 @@ a:focus {
     padding: 100px 0;
     text-align: center;
     color: #fff;
-    background: url(../img/overview.jpg) no-repeat bottom center scroll;
+    background: url(../img/sunset.jpg) no-repeat bottom center scroll;
     background-color: #000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -255,7 +255,8 @@ a:focus {
     height:auto;
     padding: 0;
     color: #fff;
-    background: url(../img/computertable.jpg) no-repeat bottom center scroll;
+    font-weight: bold;
+    background: url(../img/flowers.jpg) no-repeat bottom center scroll;
     background-color: #000;
     -webkit-background-size: cover;
     -moz-background-size: cover;
@@ -265,17 +266,17 @@ a:focus {
 
 .about-section {
     width:100%;
-    height: auto;
-    
+    height: auto;    
 }
 
 #about , #contact{
-    color: #000;
+    color: #ff7f50
 }
 
 #about{
     padding:50px 0 100px 0;
-     background: #18bc9c;
+     background:#00BFFF;
+
 }
 
 @media(min-width:767px) {
@@ -292,8 +293,8 @@ a:focus {
 
 .btn {
     text-transform: uppercase;
-    font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-weight: 400;
+    font-family:Monotype Corsiva ;
+           font-weight: 400;
     -webkit-transition: all .3s ease-in-out;
     -moz-transition: all .3s ease-in-out;
     transition: all .3s ease-in-out;
